# webinar_form

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
main/: app.py  forms.py
main/templates/: base.html  flash_message.html  flash_messsage.html  index.html  webinar.html
