[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Baird",email = "evanbaird@evans-mbp.lan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython (>=9.9.0,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-emoji (>=0.2.0,<0.3.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
